test/fail_compilation/fail6132a.d
// REQUIRED_ARGS: -w

struct S
{
    extern(C) int clock();
}
